--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.devtools.restart.enabled=true
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/study_db
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/study_db
-spring.datasource.username=study_user
-spring.datasource.password=mariadb
+spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/team3
+spring.datasource.username=team3_user
+spring.datasource.password=team3
 
 #\uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
 mybatis.mapper-locations=classpath:mapper/*.xml
